# substreams-example

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.graph-node/: config.toml
subgraphs/solana/: package-lock.json  package.json  schema.graphql  subgraph.yaml  tsconfig.json
subgraphs/solana/src/: mappings.ts
subgraphs/solana/src/pb/mydata/v1/: Approve.ts  Burn.ts  CloseAccount.ts  Event.ts  Events.ts  FreezeAccount.ts  InitializeAccount.ts  InitializeImmutableOwner.ts  InitializeMint.ts  InitializeMultisig.ts  MintTo.ts  MultiSignature.ts  Revoke.ts  SetAuthority.ts  Signer.ts  SingleSignature.ts  SyncNative.ts  ThawAccount.ts  Transfer.ts
subgraphs/solana/src/pb/mydata/v1/Approve/: ApproveAccounts.ts  ApproveInstruction.ts
subgraphs/solana/src/pb/mydata/v1/Burn/: BurnAccounts.ts  BurnInstruction.ts
subgraphs/solana/substreams/solana_specified_tokens/: solana-specified-tokens-v0.1.0.spkg
substreams/solana/: Cargo.toml  solana-v0.1.0.spkg  substreams.yaml
substreams/solana/proto/: mydata.proto
substreams/solana/src/: map_block.rs
substreams/solana_minimal/: .substreams.env  Cargo.toml  README.md  generator.json  substreams.yaml
substreams/solana_specified_tokens/: .substreams.env  Cargo.toml  README.md  buf.gen.yaml  generator.json  solana-specified-tokens-v0.1.0.spkg  substreams.yaml
substreams/solana_specified_tokens/proto/: mydata.proto
substreams/solana_specified_tokens/src/: instructions.rs  lib.rs  map_block.rs  utils.rs
substreams/solana_specified_tokens/src/pb/: mod.rs  mydata.v1.rs
(+28 files in other folders)
